# esp32-terrarium-control

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig
etl/share/etl/cmake/: etlConfigVersion.cmake
main/: CMakeLists.txt  config.h  http_server.cpp  http_server.h  idf_component.yml  logs.cpp  logs.h  logs.html  main.cpp  main.h  mdns.cpp  mdns_manager.h  settings.cpp  settings.h  wifi.cpp  wifi.h
ui/: components.css  index.html  package-lock.json  package.json  settings.js
